@@ -1,6 +1,7 @@
 *** WooCommerce Shipping & Tax Changelog ***
 
 = 1.25.23 - 2022-xx-xx =
+* Fix - Added "Delete California tax rates" tool.
 * Fix - Extract WC_Connect_TaxJar_Integration::backup_existing_tax_rates() for re-usability.
 
 = 1.25.22 - 2022-02-02 =
